--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 <a href="being.pdf"> time as being </a> <br>
 <a href="soft.pdf"> logic as tribal OS </a> <br>
 <a href="qa.pdf"> infrequently asked questions </a> <br>
-<a href="f.pdf"> wasteland </a> <br>
+<a href="f.pdf"> wasteland </a> <br><br>
 </body>
 </html>
