--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <img src="mou.jpeg" width=500 ><br><br><br>
 
 <a href="aspect_realism.pdf">aspect realism </a> <br>
-<a href="brains.pdf"> electric meat </a> <br>
+<a href="brains.pdf"> ontological consciousness and electric meat </a> <br>
 <a href="aspectualism.pdf">aspectualism summary </a> <br>
 <a href="ont_phen.pdf">ontological phenomenalism </a> <br>
 <a href="ont9.pdf"> ontology / absurdism </a> <br>
